[gd_scene load_steps=5 format=2]

[ext_resource path="res://bird/Bird.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/world.gd" type="Script" id=2]
[ext_resource path="res://_config/athletic_font.tres" type="Theme" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 20 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Bird" parent="." instance=ExtResource( 1 )]
position = Vector2( 172, 311 )

[node name="WallTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="DeadZone" type="Node2D" parent="."]
position = Vector2( 172, 0 )

[node name="DeadUp" type="StaticBody2D" parent="DeadZone"]
position = Vector2( 0, -21 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadZone/DeadUp"]
shape = SubResource( 1 )

[node name="DeadDown" type="StaticBody2D" parent="DeadZone"]
position = Vector2( 0, 624 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadZone/DeadDown"]
shape = SubResource( 1 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )

[node name="ScoreLabel" type="Label" parent="UI"]
margin_right = 92.0
margin_bottom = 41.0
text = "Score:"

[node name="ScoreNumber" type="Label" parent="UI"]
margin_left = 103.0
margin_right = 187.0
margin_bottom = 41.0
text = "0"

[node name="BestLabel" type="Label" parent="UI"]
margin_top = 40.0
margin_right = 92.0
margin_bottom = 81.0
text = "Best:"

[node name="BestNumber" type="Label" parent="UI"]
margin_left = 103.0
margin_top = 40.0
margin_right = 187.0
margin_bottom = 81.0
text = "0"

[connection signal="dead" from="Bird" to="." method="_on_Bird_dead"]
[connection signal="score_up" from="Bird" to="." method="_on_Bird_score_up"]
[connection signal="timeout" from="WallTimer" to="." method="_on_WallTimer_timeout"]
